# simple_apx_app

./: .gitignore  CMakeLists.txt  operator_sample.txt  readMe
inc/BookKeeping/: fp_helpers.h  globals.h  operandFile_parser.h  operatorFile_parser.h  setSubType.h
inc/MotionEstimationHeaders/: RecME.h  TypeDefs.h  Utilities.h  foo.h
inc/OperatorHeaders/: Operators.h  ac_types.h  analysis.h  bam.h  bta.h  btm.h  compare_bmp.h  error_model.h  eta1.h  eta2.h  fft.h  hw_ac.h  io_stat.h  jpeg_helper.h  loa.h  loadjpg.h  loadjpg_ac.h  operand_gen.h  sim_config.h
inc/jpg_apx/: book_keeping.h  comparebmp.h  loadjpg.h  modules_isolated.h  savejpg.h
src/BookKeeping/: cscope.out  fp_helpers.cpp  globals.cpp  operandFile_parser.cpp  operatorFile_parser.cpp  setSubType.cpp
src/CSrc/: a.out  foo.cpp  foo.h  main.cpp
src/Operators/: 1  a.out  all_res.txt  analysis.cpp  bam.cpp  behzad_read_me  bta.cpp  btm.cpp  error_model.cpp  error_model_old.cpp  fft.cpp  hw_ac.cpp  io_stat.cpp  jpeg_helper.cpp  ok  operand_gen.cpp  testing_operators.cpp
src/Operators/operators_to_be_explored_later/: eta1.cpp  eta2.cpp  loa.cpp
